navbar, carousel y seccion informativa 3 agregadas

--- a/Arkasi/Arkasi/src/app/components/arkass/arkass.component.html
+++ b/Arkasi/Arkasi/src/app/components/arkass/arkass.component.html
@@ -1,12 +1,12 @@
 <head>
 </head>
 <header>
-
     <!-- Inicio del menú -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top py-4 ">
+        <div class="container">
 
         <a class="navbar-brand" href="#">
-            <img src="../../../assets/img/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+            <img src="../../../assets/img/logo.png" width="35" height="35" class="d-inline-block align-top" alt="">
             Arkasi
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -15,13 +15,15 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link" href="#">Portafolio <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#">About</a>
-                <a class="nav-item nav-link" href="#">Blog</a>
+                <a class="nav-item nav-link  px-5" href="#">Portafolio</a>
+                <a class="nav-item nav-link px-5" href="#">About</a>
+                <a class="nav-item nav-link px-5" href="#">Blog</a>
           
             </div>
         </div>
+    </div>
     </nav>
+
     <!-- final de menú -->
 
     <!-- inicio slider -->
@@ -31,6 +33,12 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+            
+
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -49,6 +57,34 @@
                 </div>
                 <div class="carousel-item">
                     <img class="d-block w-100" src="../../../assets/img/carrete-3.jpg" alt="Third slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>hola</h5>
+                        <p>prueba</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="../../../assets/img/carrete-4.jpg" alt="Fourth slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>hola</h5>
+                        <p>prueba</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="../../../assets/img/carrete-5.jpg" alt="Fifth slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>hola</h5>
+                        <p>prueba</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="../../../assets/img/carrete-6.jpg" alt="Six slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>hola</h5>
+                        <p>prueba</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="../../../assets/img/carrete-7.jpg" alt="Seventh slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>hola</h5>
                         <p>prueba</p>
