--- a/fesapade/src/app/components/landingpage/landingpage.component.html
+++ b/fesapade/src/app/components/landingpage/landingpage.component.html
@@ -1,5 +1,5 @@
 <title>Fesapade</title>
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <body>
   <header>
     <div class="container-fluid p-0">
@@ -168,4 +168,36 @@
     ab! Laborum, iste cupiditate cumque alias quae, dicta illum aut nostrum, ex impedit repellendus natus vitae quaerat
     veritatis aspernatur est excepturi sequi hic molestias voluptatum! Possimus quo sit veniam facere aliquam
     voluptatum, laborum dolorum.</p>
+
+  <footer>
+    <div class="container-fluid p-0">
+      <div class="row text-left">
+        <div class="col-md-5 col-md-5">
+          <h1 class="text-light">About Us</h1>
+          <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem illo et dolores!</p>
+          <p class="pt-4 text-muted">Copyright ©2021 All rights reserved|Developed By <span>R.Coto and A.Vladimir</span>
+          </p>
+        </div>
+        <div class="col-md-5">
+          <h4 class="text-light">Nuestros Cursos</h4>
+          <li class="text-muted">Lorem, ipsum dolor.</li>
+          <li class="text-muted">Lorem, ipsum dolor.</li>
+          <li class="text-muted">Lorem, ipsum dolor.</li>
+          <li class="text-muted">Lorem, ipsum dolor.</li>
+        </div>
+        <div class="col-md-2 col-sm-12">
+          <h4 class="text-light">Síguenos</h4>
+          <p class="text-muted">Seamos sociables</p>
+          <div class="column">
+            <i class="fa fa-facebook-f"></i>
+            <i class="fa fa-instagram"></i>
+            <i class="fa fa-twitter"></i>
+            <i class="fa fa-youtube-play"></i>
+          </div>
+        </div>
+
+
+      </div>
+    </div>
+  </footer>
 </body>
