--- a/fesapade/src/app/components/landingpage/landingpage.component.html
+++ b/fesapade/src/app/components/landingpage/landingpage.component.html
@@ -1,6 +1,10 @@
 <title>Fesapade</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+
 <body>
+
   <header>
     <div class="container-fluid p-0">
       <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
@@ -26,7 +30,7 @@
               <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item active">
-              <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Log In</button>
+              <button class="btn btn-outline-danger my-2 my-sm-0">Log In</button>
             </li>
           </ul>
         </div>
@@ -61,10 +65,101 @@
       <!--slider end-->
     </div>
   </header>
+  <!--section 1-->
+  <section class="section-1">
+    <br>
+    <br>
+    <br>
+
+    <div class="container-fluid">
+      <div class="container text-center">
+        <div class="numbers">
+          <div class="row">
+            <div class="col-3">
+              <img class="icon" src="../../../assets/icon2.png" alt="">
+              <div class="rect">
+                <h1>2950</h1>
+                <p>Saltos libres</p>
+              </div>
+            </div>
+            <div class="col-3">
+              <img class="icon" src="../../../assets/quality.png" alt="">
+
+              <div class="rect">
+                <h1>3000</h1>
+                <p>Certificaciones</p>
+              </div>
+
+
+            </div>
+            <div class="col-3">
+              <img class="icon" src="../../../assets/group.png" alt="">
+
+              <div class="rect">
+                <h1>500</h1>
+                <p>Miembros de comunidad</p>
+              </div>
+
+
+            </div>
+            <div class="col-3">
+              <img class="icon" src="../../../assets/trophy.png" alt="">
+
+              <div class="rect">
+                <h1>2000</h1>
+                <p>Reconocimientos</p>
+              </div>
+
+
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+    <br>
+    <br>
+
+  </section>
+  <!--end section 1-->
+
+  <!--section 2-->
   <br>
+  <section class="section-2">
+    <div class="container text-center">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="pray">
+            <img src="../../../assets/imgsect1.jpg" alt="Pray">
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="panel text-left">
+            <h1>Federación Salvadoreña de paracaidismo</h1>
+            <p class="pt-4">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam distinctio aliquam porro blanditiis iusto
+              mollitia minima obcaecati officia maxime recusandae!
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita iure, veniam, eos dolorum reprehenderit
+              quam error nobis rem laboriosam illo quos quisquam.</p>
+          </div>
+        </div>
+
+
+
+      </div>
+    </div>
+
+  </section>
+  <!--end section 2-->
+
   <!--section 3-->
-  <section>
+  <section class="section-3">
     <div class="container-fluid" id="main-content">
+      <div class="container text-center">
+        <h1 class="text-dark">Nuestros cursos</h1>
+        <p class="text-secondary">Únete lo mas pronto posible</p>
+      </div>
       <div class="container">
         <div class="row">
           <div class="col-3">
@@ -164,11 +259,138 @@
     </div>
   </section>
   <!--end section 3-->
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad neque fugiat temporibus dolorum nihil, ipsa expedita
-    ab! Laborum, iste cupiditate cumque alias quae, dicta illum aut nostrum, ex impedit repellendus natus vitae quaerat
-    veritatis aspernatur est excepturi sequi hic molestias voluptatum! Possimus quo sit veniam facere aliquam
-    voluptatum, laborum dolorum.</p>
 
+  <!--section 4-->
+  <section class="section-4">
+
+    <div class="container text-center">
+      <h1 class="text-dark">Instructores</h1>
+      <p class="text-secondary">Personal altamente calificado.</p>
+      <div class="team row">
+        <div class="col-md-4 col-12 text-center">
+          <div class="card mr-2 d-inline-block shadow-lg">
+            <div class="card-img-top">
+              <img src="../../../assets/intructor.jpg" alt="Member" class="img-fluid border-radius p-4">
+            </div>
+            <div class="card-body">
+              <h3 class="card-title">Brenda Canizales</h3>
+              <p class="card-text">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente in quos dolorum, delectus doloremque
+                soluta.
+
+              </p>
+              <p class="text-black-50">Instructor de caida libre</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 col-12">
+          <!--comienzo de carousel-->
+          <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active text-center">
+                <div class="card mr-2 d-inline-block shadow-lg">
+                  <div class="card-img-top">
+                    <img src="../../../assets/intructor.jpg" alt="Member" class="img-fluid border-radius p-4">
+                  </div>
+                  <div class="card-body">
+                    <h3 class="card-title">Mario Martínez</h3>
+                    <p class="card-text">
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente in quos dolorum, delectus
+                      doloremque
+                      soluta.
+
+                    </p>
+                    <p class="text-black-50">Instructor de principiantes</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item text-center">
+                <div class="card mr-2 d-inline-block shadow-lg">
+                  <div class="card-img-top">
+                    <img src="../../../assets/instructor2.jpg" alt="Member" class="img-fluid border-radius p-4">
+                  </div>
+                  <div class="card-body">
+                    <h3 class="card-title">Javier Figueroa</h3>
+                    <p class="card-text">
+                      IUAHDUIABHGFDIUBFIUB Fjbncabnda bdiobndlo nlin. Sapiente in quos dolorum, delectus doloremque
+                      soluta.
+
+                    </p>
+                    <p class="text-black-50">Instructor teórico</p>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+          <!--final de carousel-->
+        </div>
+
+        <div class="col-md-4 col-12 text-center">
+          <div class="card mr-2 d-inline-block shadow-lg">
+            <div class="card-img-top">
+              <img src="../../../assets/instructor2.jpg" alt="Member" class="img-fluid border-radius p-4">
+            </div>
+            <div class="card-body">
+              <h3 class="card-title">Gabriel Manzanares</h3>
+              <p class="card-text">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente in quos dolorum, delectus doloremque
+                soluta.
+
+              </p>
+              <p class="text-black-50">Instructor de niños</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+  </section>
+<!--end section 4-->
+
+  <!--section 5-->
+
+  <section class="section-5">
+    <div class="container text-center">
+    <h1 class="text-secondary">Nuestros afiliados</h1>
+    <div class="container">
+      <div class="row">
+        <div class="container">
+          <div class="row">
+            <div class="col-3">
+              <div class="container">
+                <a class="partner"><img src="../../../assets/indes.jpg" class="img-fluid" alt="Colorlib Template"></a>
+              </div>
+            </div>
+
+            <div class="col-3">
+              <div class="container">
+                <a class="partner"><img src="../../../assets/indes.jpg" class="img-fluid" alt="Colorlib Template"></a>
+              </div>
+            </div>
+
+            <div class="col-3">
+              <div class="container">
+                <a class="partner"><img src="../../../assets/indes.jpg" class="img-fluid" alt="Colorlib Template"></a>
+              </div>
+            </div>
+
+            <div class="col-3">
+              <div class="container">
+                <a class="partner"><img src="../../../assets/indes.jpg" class="img-fluid" alt="Colorlib Template"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </section>
+  <br>
+  <br>
+  <br>
+  <!--end section 5-->
   <footer>
     <div class="container-fluid p-0">
       <div class="row text-left">
@@ -200,4 +422,5 @@
       </div>
     </div>
   </footer>
+
 </body>
