--- a/fesapade/src/app/components/landingpage/landingpage.component.html
+++ b/fesapade/src/app/components/landingpage/landingpage.component.html
@@ -8,7 +8,7 @@
   <header>
     <div class="container-fluid p-0">
       <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-        <a class="navbar-brand" href="#"><img src="../../../assets/logo.png" width="30" height="30"
+        <a class="navbar-brand" routerLink="/index"><img src="../../../assets/logo.png" width="30" height="30"
             class="d-inline-block align-top" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,13 +18,13 @@
           <div class="mr-auto"></div>
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" routerLink="/index">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#">Cursos</a>
+              <a class="nav-link" routerLink="/cursos">Cursos</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#">Galeria</a>
+              <a class="nav-link" routerLink="/galeria">Galeria</a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="#">About</a>
