--- a/fesapade/src/app/components/landingpage/landingpage.component.html
+++ b/fesapade/src/app/components/landingpage/landingpage.component.html
@@ -30,7 +30,7 @@
               <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item active">
-              <button class="btn btn-outline-danger my-2 my-sm-0">Log In</button>
+              <button class="btn btn-outline-danger my-2 my-sm-0" routerLink="/log-in">Log In</button>
             </li>
           </ul>
         </div>
