--- a/fesapade/src/app/components/galeria/galeria.component.html
+++ b/fesapade/src/app/components/galeria/galeria.component.html
@@ -29,7 +29,7 @@
                         <a class="nav-link" href="#">About</a>
                     </li>
                     <li class="nav-item active">
-                        <button class="btn btn-outline-danger my-2 my-sm-0">Log In</button>
+                        <button class="btn btn-outline-primary my-2 my-sm-0">Log In</button>
                     </li>
                 </ul>
             </div>
