--- a/fesapade/src/app/components/administrador/administrador.component.html
+++ b/fesapade/src/app/components/administrador/administrador.component.html
@@ -1,15 +1,113 @@
-<div class="consulta" id="servicios">
-    <div class="separador">
-      <h6 class="display-4">Dashboard</h6>
-        <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-          <a class="nav-link" id="v-pills-empleado-tab" data-toggle="pill" routerLink="/crear-empleado"
-          routerLinkActive="active" role="tab" aria-controls="v-pills-empleado" aria-selected="true">Agregar empleados</a>
-          <a class="nav-link" id="v-pills-empleado-tab" data-toggle="pill" routerLink="/listar-empleado"
-          routerLinkActive="active"  role="tab" aria-controls="v-pills-empleado" aria-selected="true">Lista de empleados</a>
-          <a class="nav-link" id="v-pills-horario-tab" data-toggle="pill" routerLink="/crear-horarios" role="tab"
-          routerLinkActive="active"  aria-controls="v-pills-horario" aria-selected="false">Agregar cursos</a>
-          <a class="nav-link" id="v-pills-horario-tab" data-toggle="pill" routerLink="/listar-horarios" role="tab"
-          routerLinkActive="active"  aria-controls="v-pills-horario" aria-selected="false">Listar cursos</a>        
+<head>
+  <link
+  rel="stylesheet"
+  href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CSS GRID DASHBOARD</title>
+  </head>
+  <body id="body">
+    <div class="container">
+      <nav class="navbar">
+        <div class="nav_icon" *ngIf="!contentHighlighted" (click)="contentHighlighted = true" >
+          <i class="fa fa-bars" aria-hidden="true"></i>
         </div>
+        <div class="navbar__left">
+
+          <a class="active_link">Administrador</a>
+        </div>
+        <div class="navbar__right">
+          <a href="#">
+            <img width="30" src="../../../assets/user.svg" alt="" />
+            <!-- <i class="fa fa-user-circle-o" aria-hidden="true"></i> -->
+          </a>
+        </div>
+      </nav>
+
+      <main>
+        <div class="main__container">
+          <!-- MAIN TITLE STARTS HERE -->
+
+          <div class="main__title">
+       
+            <div class="main__greeting">
+              <h1>Hola Javier</h1>
+              <p>Bienvenido al dashboard de administrador</p>
+            </div>
+          </div>
+
+          <!-- MAIN TITLE ENDS HERE -->
+
+         
+        </div>
+      </main>
+
+      <div id="sidebar" [ngClass]="{sidebar_responsive: contentHighlighted}">
+        <div class="sidebar__title">
+          <div class="sidebar__img">
+            <img src="../../../assets/logo.png" alt="logo"/>
+            <h1>Fesapade</h1>
+          </div>
+          <i
+          *ngIf="contentHighlighted" (click)="contentHighlighted = false"
+            class="fa fa-times"
+            id="sidebarIcon"
+            aria-hidden="true"
+          ></i>
+        </div>
+
+        <div class="sidebar__menu">
+          <div class="sidebar__link">
+            <i class="fa fa-home"></i>
+            <a href="#">Home</a>
+          </div>
+          <h2>Empleados</h2>
+          <div class="sidebar__link">
+            <i class="fa fa-user-plus" aria-hidden="true"></i>
+            <a href="#">Agregar empleado</a>
+          </div>
+          <div class="sidebar__link active_menu_link">
+            <i class="fa fa-wrench"></i>
+            <a href="#">Administrar empleados</a>
+          </div>
+
+          <h2>Federados</h2>
+          <div class="sidebar__link">
+            <i class="fa fa-user-plus"></i>
+            <a href="#">Agregar federado</a>
+          </div>
+          <div class="sidebar__link">
+            <i class="fa fa-wrench"></i>
+            <a href="#">Administrar federado</a>
+          </div>
+          
+          <h2>Cursos</h2>
+          <div class="sidebar__link">
+            <i class="fa fa-plus"></i>
+            <a href="#">Crear curso</a>
+          </div>
+          <div class="sidebar__link">
+            <i class="fa fa-wrench"></i>
+            <a href="#">Administrar curso</a>
+          </div>
+          <div class="sidebar__link">
+            <i class="fa fa-graduation-cap"></i>
+            <a href="#">Asignar cursos</a>
+          </div>
+
+          <h2>Perfil</h2>
+          <div class="sidebar__link">
+            <i class="fa fa-pencil-square-o"></i>
+            <a href="#">Editar mi perfil</a>
+          </div>
+          <div class="sidebar__logout">
+            <i class="fa fa-sign-out"></i>
+            <a href="#">Cerrar sesión</a>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <script src="script.js"></script>
+  </body>
+  
