--- a/fesapade/src/app/components/cursos/cursos.component.html
+++ b/fesapade/src/app/components/cursos/cursos.component.html
@@ -3,7 +3,6 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 
-
 <header>
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
@@ -29,7 +28,7 @@
                         <a class="nav-link" href="#">About</a>
                     </li>
                     <li class="nav-item active">
-                        <button class="btn btn-outline-danger my-2 my-sm-0">Log In</button>
+                        <button class="btn btn-outline-primary my-2 my-sm-0">Log In</button>
                     </li>
                 </ul>
             </div>
