--- a/fesapade/src/app/components/galeria/galeria.component.css
+++ b/fesapade/src/app/components/galeria/galeria.component.css
@@ -31,11 +31,11 @@ header .navbar-brand{
 }
 
 header .nav-link:hover{
-    color: #c60035;
+    color: #007bff;
 }
 
 header .navbar-brand:hover{
-    color: #c60035;
+    color: #007bff;
 }
 
 .navbar{
@@ -109,11 +109,11 @@ footer{
 
 }
 footer p > span{
-    color: #c60035;
+    color: #007bff;
     
 }
 .column i{
-    color: #c60035;
+    color: #007bff;
 }
 
 .column i+i{
@@ -139,6 +139,13 @@ footer p > span{
 
     .section-4 .carousel-inner{
         width: 24rem;
+    }
+  }
+
+  @media only screen and (max-width: 425px) {
+    footer .row .col-md-2{
+        margin-top: 8vmin;
+
     }
   }
   /*end mobile-design*/
