--- a/fesapade/src/app/components/instructor/instructor.component.html
+++ b/fesapade/src/app/components/instructor/instructor.component.html
@@ -1,1 +1,167 @@
-<p>instructor works!</p>
+<head>
+  <link
+  rel="stylesheet"
+  href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CSS GRID DASHBOARD</title>
+  </head>
+  <body id="body">
+    <div class="container">
+      <nav class="navbar">
+        <div class="nav_icon" *ngIf="!contentHighlighted" (click)="contentHighlighted = true" >
+          <i class="fa fa-bars" aria-hidden="true"></i>
+        </div>
+        <div class="navbar__left">
+
+          <a class="active_link">Instructor</a>
+        </div>
+        <div class="navbar__right">
+          <a href="#">
+            <img width="30" src="../../../assets/user.svg" alt="" />
+            <!-- <i class="fa fa-user-circle-o" aria-hidden="true"></i> -->
+          </a>
+        </div>
+      </nav>
+
+      <main>
+        <div class="main__container">
+          <!-- MAIN TITLE STARTS HERE -->
+
+          <div class="main__title">
+       
+            <div class="main__greeting">
+              <h1>Hola Javier</h1>
+              <p>Bienvenido al dashboard de instructores</p>
+            </div>
+          </div>
+
+
+          <!-- MAIN TITLE ENDS HERE -->
+
+                                      <!--section 1-->
+                                      <section class="section-4">
+
+                                        <div class="text-center">
+                                            <h1 class="text-dark">Mis cursos</h1>
+                                          
+                                            <div class="team row">
+                                                <div class="col-md-4 col-12 text-center">
+                                                    <div class="card mr-2 d-inline-block shadow-lg">
+                                                        <div class="card-img-top">
+                                                            <img src="../../../assets/intructor.jpg" alt="Member"
+                                                                class="img-fluid">
+                                                        </div>
+                                                        <div class="card-body">
+                                                            <h3 class="card-title">Caida Libre</h3>
+                                                            
+                                                            <br><br>
+                                                            <div class="btn-content">
+                                                                <button class="btn2">Ir al curso</button>
+        
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-4 col-12">
+        
+                                                    <div class="carousel-item active text-center">
+                                                        <div class="card mr-2 d-inline-block shadow-lg">
+                                                            <div class="card-img-top">
+                                                                <img src="../../../assets/intructor.jpg" alt="Member"
+                                                                    class="img-fluid">
+                                                            </div>
+                                                            <div class="card-body">
+                                                                <h3 class="card-title">Skydiving</h3>
+                                                                
+                                                                <br><br>
+                                                                <div class="btn-content">
+                                                                    <button class="btn2">Ir al curso</button>
+        
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+        
+                                                </div>
+        
+                                                <div class="col-md-4 col-12 text-center">
+                                                    <div class="card mr-2 d-inline-block shadow-lg">
+                                                        <div class="card-img-top">
+                                                            <img src="../../../assets/instructor2.jpg" alt="Member"
+                                                                class="img-fluid">
+                                                        </div>
+                                                        <div class="card-body">
+                                                            <h3 class="card-title">Máquina de aire</h3>
+                                                            
+                                                            <br><br>
+                                                            <div class="btn-content">
+                                                                <button class="btn2">Ir al curso</button>
+        
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                
+                                            </div>
+        
+                                        </div>
+        
+                                    </section>
+                                    <!--end section 1-->
+                                    <!--Fin de contenido-->
+         
+        </div>
+      </main>
+
+      <div id="sidebar" [ngClass]="{sidebar_responsive: contentHighlighted}">
+        <div class="sidebar__title">
+          <div class="sidebar__img">
+            <img src="../../../assets/logo.png" alt="logo"/>
+            <h1>Fesapade</h1>
+          </div>
+          <i
+          *ngIf="contentHighlighted" (click)="contentHighlighted = false"
+            class="fa fa-times"
+            id="sidebarIcon"
+            aria-hidden="true"
+          ></i>
+        </div>
+
+        <div class="sidebar__menu">
+          <div class="sidebar__link">
+            <i class="fa fa-home"></i>
+            <a href="#">Home</a>
+          </div>
+          <h2>Anuncios y evaluaciones</h2>
+          <div class="sidebar__link">
+            <i class="fa fa-plus" aria-hidden="true"></i>
+            <a href="#">Agregar publicación</a>
+          </div>
+          <div class="sidebar__link">
+            <i class="fa fa-wrench"></i>
+            <a href="#">Administrar publicaciones</a>
+          </div>
+
+          <h2>Académico</h2>
+          <div class="sidebar__link active_menu_link" >
+            <i class="fa fa-th-list"></i>
+            <a href="#">Mis cursos</a>
+          </div>
+          <h2>Perfil</h2>
+          <div class="sidebar__link">
+            <i class="fa fa-pencil-square-o"></i>
+            <a href="#">Editar mi perfil</a>
+          </div>
+          <div class="sidebar__logout">
+            <i class="fa fa-sign-out"></i>
+            <a href="#">Cerrar sesión</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <script src="script.js"></script>
+  </body>
+  
+ 
