--- a/fesapade/src/app/components/landingpage/landingpage.component.css
+++ b/fesapade/src/app/components/landingpage/landingpage.component.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 *{
     box-sizing: hidden;
+    font-family: 'Roboto', sans-serif;
 }
 header,
 section{
@@ -30,11 +32,11 @@ header .navbar-brand{
 }
 
 header .nav-link:hover{
-    color: #c60035;
+    color: #007bff;
 }
 
 header .navbar-brand:hover{
-    color: #c60035;
+    color: #007bff;
 }
 
 .navbar{
@@ -53,12 +55,12 @@ nav img:hover{
 }
 .numbers .rect h1{
     font-size: 3rem;
-    color: #c60035;
+    color: white;
     
 }
 
 .numbers .rect p{
-    color: #c60035;
+    color: white;
     font-family: 'Roboto', sans-serif;
 }
 /*end section 1 */
@@ -302,11 +304,11 @@ footer{
 
 }
 footer p > span{
-    color: #c60035;
+    color: #007bff;
     
 }
 .column i{
-    color: #c60035;
+    color: #007bff;
 }
 
 .column i+i{
@@ -322,6 +324,10 @@ footer p > span{
         position: initial;
         width: initial;
         height: initial;
+    }
+
+    .section-4 .carousel-item{
+        padding-left: 0.6rem;
     }
     .section-4 .team{
         display: flex;
