--- a/fesapade/src/app/components/log-in/log-in.component.html
+++ b/fesapade/src/app/components/log-in/log-in.component.html
@@ -1,87 +1,88 @@
-<body>
-    <!--INICIO MENU -->
-    <header>
-      <div class="container-fluid p-0">
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-      <a class="navbar-brand" routerLink="/index"><img src="../../../assets/logo.png" width="30" height="30"
-          class="d-inline-block align-top" alt=""></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <div class="mr-auto"></div>
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" routerLink="/index">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" routerLink="/cursos">Cursos</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" routerLink="/galeria">Galeria</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="#">About</a>
-          </li>
-        
-        </ul>
-      </div>
-    </nav>
-</div>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+
+
+
+  <!--INICIO MENU -->
+  <header>
+    <div class="container-fluid p-0">
+      <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <a class="navbar-brand" routerLink="/index"><img src="../../../assets/logo.png" width="30" height="30"
+            class="d-inline-block align-top" alt=""></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="mr-auto"></div>
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" routerLink="/index">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" routerLink="/cursos">Cursos</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" routerLink="/galeria">Galeria</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#">About</a>
+            </li>
+
+          </ul>
+        </div>
+      </nav>
+    </div>
   </header>
-     <!--FIN MENU -->
-    <!--INICIO FORMULARIO DE SESION -->
-    <div class="registro">
-      <div class="contenido">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12">
-              <div class="row my-5">
-                <div class="col-md-6 mx-auto my-5">
-                  <div class="rounded-0">
-                    <div>
-                      <h3 class="mb-0 text-white display-3">Iniciar Sesión</h3>
-                    </div>
-                    <div class="displayTable">
-                      <div class="displayTableCell">
-                        <div class="authBlock">
-                          <form [formGroup]="contacto">
-          
-                            <div class="form-group">
-                                <label>Email</label>
-                                <input type="text" [(ngModel)]="contacto2.email" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
-                                <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-                                    <div *ngIf="f.email.errors.required">El email es obligatorio</div>
-                                    <div *ngIf="f.email.errors.email">Por favor, ingresa tu Email</div>
-                                </div>
-                            </div>
-                           
-                       
-                            <div class="form-group">
-                               <label>Password</label>
-                               <input type="text" [(ngModel)]="contacto2.password" formControlName="password" class="form-control"  [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-                               <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                                   <div *ngIf="f.password.errors.required">Por favor, ingresa tu password</div>
-                               </div>
-                           </div> 
-                   
-                            <div class="form-group">
-                                     
-                               <button style="margin: 10px" class="btn btn-success" (click)="IniciarSeccion()"> Iniciar Sesión </button>
-                     
-                              </div>
-                   
-                   </form>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
+  <!--FIN MENU -->
+
+  <!--INICIO FORMULARIO DE SESION -->
+  <div class="caja shadow-lg">
+
+    <div class="container">
+      <h1 class="text-dark text-center">Iniciar Sesión</h1>
+
+
+
+      <div class="col-md-9 mx-auto my-0">
+
+
+        <form [formGroup]="contacto">
+          <div class="form-group">
+            <label>Email</label>
+            <input type="text" [(ngModel)]="contacto2.email" formControlName="email" class="form-control"
+              [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
+            <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+              <div *ngIf="f.email.errors.required">El email es obligatorio</div>
+              <div *ngIf="f.email.errors.email">Por favor, ingresa tu Email</div>
             </div>
           </div>
-        </div>
+
+
+          <div class="form-group">
+            <label>Password</label>
+            <input type="password" [(ngModel)]="contacto2.password" formControlName="password" class="form-control"
+              [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+              <div *ngIf="f.password.errors.required">Por favor, ingresa tu password</div>
+            </div>
+          </div>
+
+          <div class="form-group">
+
+            <button class="btn btn-primary" (click)="IniciarSeccion()"> Iniciar Sesión </button>
+
+          </div>
+
+        </form>
+
+
       </div>
+
+
+
     </div>
-  </body>
+
+  </div>
+
